feat: 增加活动管理模块和商品模块的表结构修改
